--- a/_config.yml
+++ b/_config.yml
@@ -1,199 +1,95 @@
 # --- Basic options --- #
 
 # Name of website
-title: Apr4h.github.io
+title: "Sarvesh Aadhithya's Portfolio"
 
 # Short description of your site
-description: CTF Writeups and sometimes other stuff too
+description: "CTF Writeups and Cybersecurity Blogs"
 
 # Your name to show in the footer
-author: Apra
+author: "Sarvesh Aadhithya"
 
-# --- List of links in the navigation bar --- #
-
+# --- Navigation Links --- #
 navbar-links:
-  HTB Profile: "https://www.hackthebox.eu/profile/46633"
-  My Github: "https://github.com/Apr4h"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  
+  Writeups: "/writeups"
+  Blogs: "/blogs"
 
 # --- Logo --- #
+# Path to avatar image in the navbar
+avatar: "/assets/img/3jd.png"    # Add your profile picture here
+round-avatar: true               # Make the avatar circular
 
-# Image to show in the navigation bar - works best with a square image
-# Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/3jd.png"
-
-# By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
-round-avatar: true
-
-# If you want to have an image logo in the top-left corner instead of the title text,
-# then specify the following parameter
-#title-img: /path/to/image
-
-
-# --- Footer options --- #
-
-# Select the social network links that you want to show in the footer.
-# Uncomment the links you want to show and add your information to each one.
-# If you don't want to show a link to an RSS feed, set rss to "false".
+# --- Footer --- #
+# Social network links
 social-network-links:
-  email: "apr4h.ctf@gmail.com"
-  github: Apr4h
-  rss: true
-  twitter: _Apr4h
-#  reddit: yourname
-#  linkedin: daattali
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  youtube: user/deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
-#  mastodon: instance.url/@username
+  email: "apr4h.ctf@gmail.com"  # Your contact email
+  twitter: "_Apr4h"             # Your Twitter handle
+  rss: false                     # Remove RSS feed
 
-# --- General options --- #
-
-# Select which social network share links to show in posts
+# --- General Options --- #
 share-links-active:
   twitter: true
   facebook: true
   linkedin: true
   vk: false
 
-# How to display the link to your website in the footer
-# Remove this if you don't want a link in the footer
-url-pretty: "https://apr4h.githiub.io"
+# Website URL
+url-pretty: "https://zoozoo-sec.github.io"
 
-# Create a "tags" index page and make tags on each post clickable
-link-tags: true
+# --- Colors / Background --- #
+navbar-col: "#68686b"             # Navbar background color
+navbar-text-col: "#ffffff"        # Navbar text color
+navbar-border-col: "#2d3142"      # Navbar border color
+page-col: "#ffffff"               # Page background color
+link-col: "#0077b6"               # Link color
+hover-col: "#1d3557"              # Link hover color
+footer-col: "#68686b"             # Footer background color
+footer-text-col: "#ffffff"        # Footer text color
+footer-link-col: "#2a9d8f"        # Footer link color
 
-# Excerpt Word Length - Truncates the excerpt to the specified number of words on the index page
-excerpt_length: 50
-
-# --- Colours / background image --- #
-
-# Personalize the colors in your website. Colour values can be any valid CSS colour
-
-navbar-col: "#68686b"
-navbar-text-col: "#ffffff"
-navbar-border-col: "#2d3142"
-page-col: "#ffffff"
-link-col: "#0077b6"
-hover-col: "#1d3557"
-footer-col: "#68686b"
-footer-text-col: "#ffffff"
-footer-link-col: "#2a9d8f"
-
-# Alternatively, the navbar, footer, and page background can be set to use background images
-# instead of colour
-
-#navbar-img: "/assets/img/bgimage.png"
-#footer-img: "/assets/img/bgimage.png"
-#page-img: "/assets/img/bgimage.png"
-
-# --- Web Statistics Section --- #
-
-# Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: ""
-
-# Fill in your Google Analytics ID to track your website using GA
+# --- SEO and Analytics --- #
+# Google Analytics (optional)
 #google_analytics: ""
 
-# Google Tag Manager ID
-#gtm: ""
-
-# Matomo (aka Piwik) Web statistics
-# Uncomment the following section to enable Matomo. The opt-out parameter controls
-# whether or not you want to allow users to opt out of tracking.
-#matomo:
-#  site_id: "9"
-#  uri: "demo.wiki.pro"
-#  opt-out: true
-
 # --- Comments --- #
+# Uncomment and configure if you want to add comments in the future
+#disqus: "your-disqus-shortname"
 
-# To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-#disqus: ""
-
-# To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
-#fb_comment_id: ""
-
-# To use Utterances comments: (0) uncomment the following section, (1) fill in
-# "repository" (make sure the repository is public), (2) Enable Issues in your repository,
-# (3) Install the Utterances app in your repository https://github.com/apps/utterances
-# See more details about the parameters below at https://utteranc.es/
-#utterances:
-#  repository: # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  issue-term: title   # Mapping between blog posts and GitHub issues
-#  theme: github-light # Utterances theme
-#  label: blog-comments # Label that will be assigned to GitHub Issues created by Utterances
-
-# To use Staticman comments, first invite `staticmanlab` as a collaborator to your repository and
-# accept the invitation by going to `https://staticman3.herokuapp.com/v3/connect/github/<username>/<repo-name>`.
-# Then uncomment the following section and fill in "repository", "branch", and "endpoint".
-# If you want to use reCaptcha for staticman (optional for spam protection), then fill
-# in the "siteKey" and "secret" parameters below and also in `staticman.yml`.
-# See more details at https://staticman.net/
-#staticman:
-#  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
-#  endpoint   : # URL of your own deployment, with a trailing slash (will fallback to a public GitLab instance) eg. https://<your-api>/v3/entry/github/
-#  reCaptcha:
-#    siteKey  : # Use your own site key, you need to apply for one on Google
-#    secret   : # ENCRYPT your password by going to https://staticman3.herokuapp.com/v3/encrypt/<your-site-secret>
-
-# --- Misc --- #
-
-# Character used to separate site title and description in HTML document title
-# and RSS feed title
+# --- Date and Pagination --- #
 title-separator: "-"
-
-# Ruby Date Format to show dates of posts
 date_format: "%B %-d, %Y"
+timezone: "Asia/Kolkata"
 
-# Facebook App ID
-#fb_app_id: ""
-
-
-# --- You don't need to touch anything below here (but you can if you want) --- #
-
-# Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+# --- Markdown and Syntax Highlighting --- #
 markdown: kramdown
 highlighter: rouge
+
+# Permalinks for blog posts
 permalink: /:year-:month-:day-:title/
 paginate: 5
 
-kramdown:
-  input: GFM
+# --- Jekyll Plugins --- #
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
 
-# Default YAML values (more information on Jekyll's site)
+# --- Default values --- #
 defaults:
-  -
-    scope:
+  - scope:
       path: ""
       type: "posts"
     values:
       layout: "post"
-      comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
-      readtime: false # add estimated reading time on all blog posts
-  -
-    scope:
-      path: "" # all files
+      comments: true
+      social-share: true
+      readtime: true
+  - scope:
+      path: "" 
     values:
       layout: "page"
       show-avatar: true
 
-# Exclude these files from production site
+# --- Exclude these files from production site --- #
 exclude:
   - CHANGELOG.md
   - CNAME
@@ -203,10 +99,3 @@ exclude:
   - README.md
   - screenshot.png
   - docs/
-
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
